IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/25/09: Fixed uninitialized variable in Xfjointomo (In 3.13). 

3/24/09: IMOD_4-0-8
2/24/09: Fine alignment run in 3dmod will appear in the Etomo project log.

3/24/09: Tomosnapshot copies coms to a directory and strips .com (In 3.13).

3/24/09: In Etomo, added Angle Offset to Tiltxcorr.

3/23/09: Fixed initialization of maximum in Ctfphaseflip so output file with
negative values will not have a maximum of 0 (In 3.13).

3/23/09: Switched clip stat -2d maximum position from centroid over 49 pixels
to parabolic fit over 9 to avoid misleading positions.

3/23/09: Etomo gets a message from 3dmod after Tiltalign is run and puts entry
in the project log.

3/23/09: In Etomo - PEET added a useful error message when PARTICLE_DIR is not
set.

3/22/09: Changes for 64-bit version with Qt 4.5 on Mac OS X 10.5.

3/22/09: 3dmod makes sure dialogs and image windows are fully on the screen
and, on Mac, keeps them from overlapping their parent (Info window or model
view).

3/21/09: Fixed bug in using O hot key when cont/surf/point dialog not open.

3/18/09: Fixed bug in Tomopitch when two contours of a pair are drawn in
opposite directions (In 3.13).

3/18/09: Fixed computation of volume inside mesh in imodinfo (In 3.13).

3/17/09: Added option to Tiltxcorr to enter an angle offset, which can sharpen
correlations at high tilt when the specimen is tilted at 0 degrees.

3/16/09: Added transferfid messages to the Project log window.  Added the
contents of pop dialogs to the Project log window.

3/13/09: Fixed subarea floating when moving rubber band in Zap window 
(In 3.13).

3/13/09: Changes to produce new 64-bit Windows version.

3/12/09: Fixed layout of Open buttons in startup window.

3/11/09: In Etomo improved error reporting when retrieving rubberband and
slicer rotation values from 3dmod. 

3/9/09: IMOD_4-0-7
3/9/09: In fine-grained dialog, added an option to see points with mesh